@@ -74,6 +74,9 @@ Bug Fixes
 Optimizations
 ----------------------
 
+* SOLR-4339: Admin UI - Display Field-Flags on Schema-Browser
+  (steffkes)
+
 Other Changes
 ----------------------
 
